Copied existing website

--- a/research.html
+++ b/research.html
@@ -7,7 +7,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,400;10..48,600&family=Roboto:ital,wght@0,400;0,900;1,400;1,900&family=Sen:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
-	<title>Jeschke lab</title>
+	<link rel="stylesheet" href="css/people.css">
+	<title>Jeschke lab – research</title>
 </head>
 <body>
 	<nav>
@@ -21,17 +22,10 @@
 	</nav>
 	<header>
 		<!-- image source: https://www.bordet.be/nl/new-bordet-beeldbank -->
-		<img src="img/NouvelInstitutJulesBordet_Architecture(6)_1000.jpg">
+		<img src="img/NouvelInstitutJulesBordet_Architecture(1)_1000.jpg">
 	</header>
 	<main>
-		<h1>Jeschke lab</h1>
-		<h2>Translational epigenomics for cancer</h2>
-		<p>
-			<img src="img/logo_ulb.png" class="logo">
-			<img src="img/logo_bordet.png" class="logo">
-			<img src="img/logo_fnrs.png" class="logo">
-			<img src="img/logo_erc.jpg" class="logo">
-		</p>
+		<h1>Research</h1>
 		<p>
 			Our research is focused on the detection of changes in the epigenome of cancer patients and the utilization of these changes as markers and targets for cancer therapy and to gain new mechanistic insights into tumorigenesis. We realize this by profiling patient samples and genetically or pharmacologically manipulated in vitro and in vivo cancer models using genome and transcriptome-wide next-generation sequencing technologies in combination with phenotypic screens. 
 		</p>
