Added an extra person to the people page

--- a/people.html
+++ b/people.html
@@ -41,11 +41,16 @@
 				</div>
 			</li>
 			<li class="team-member-card">
-				<h2>Sarah Connor</h2>
-				<h3>Postdoc</h3>
-				<p>
-					Some extra information here
-				</p>
+				<div class="column column-left">
+					<img src="img/Jana.jpg">
+				</div>
+				<div class="column column-right">
+					<h2>Sarah Connor</h2>
+					<h3>Postdoc</h3>
+					<p>
+						Some extra information here
+					</p>
+				</div>
 			</li>
 		</ul>
 	</main>
