Updated the information on the people page

--- a/people.html
+++ b/people.html
@@ -42,10 +42,10 @@
 			</li>
 			<li class="team-member-card">
 				<div class="column column-left">
-					<img src="img/Jana.jpg">
+					<img src="img/Ada-Lovelace.jpg">
 				</div>
 				<div class="column column-right">
-					<h2>Sarah Connor</h2>
+					<h2>Ada Lovelace</h2>
 					<h3>Postdoc</h3>
 					<p>
 						Some extra information here
