--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,400;10..48,600&family=Roboto:ital,wght@0,400;0,900;1,400;1,900&family=Sen:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/index.css">
-	<title>Jeschke lab – people</title>
+	<title>Jeschke lab – publications</title>
 </head>
 <body>
 	<nav>
