--- a/people.html
+++ b/people.html
@@ -17,7 +17,7 @@
 			<li><a href="people.html">people</a></li>
 			<li><a href="research.html">research</a></li>
 			<li><a href="publications.html">publications</a></li>
-			<li><a href="#">contact</a></li>
+			<li><a href="contact.html">contact</a></li>
 		</ul>
 	</nav>
 	<header>
