--- a/research.html
+++ b/research.html
@@ -16,8 +16,8 @@
 			<li><a href="index.html">home</a></li>
 			<li><a href="people.html">people</a></li>
 			<li><a href="research.html">research</a></li>
-			<li><a href="#">publications</a></li>
-			<li><a href="#">contact</a></li>
+			<li><a href="publications.html">publications</a></li>
+			<li><a href="contact.html">contact</a></li>
 		</ul>
 	</nav>
 	<header>
