--- a/publications.html
+++ b/publications.html
@@ -21,11 +21,13 @@
 	</nav>
 	<header>
 		<!-- image source: https://www.bordet.be/nl/new-bordet-beeldbank -->
-		<!-- <img src="img/NouvelInstitutJulesBordet_Architecture(7)_1000.jpg"> -->
 		<img src="img/NouvelInstitutJulesBordet_Architecture(7)_1000.jpg">
 	</header>
 	<main>
 		<h1>Publications</h1>
+		<p>
+			This is a selection of our publications. Follow <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Jeschke%2C%20Jana%5BAuthor%5D&sort=pubdate" target="_blank">this link</a> for a full overview on PubMed.
+		</p>
 		<section class="publication-list">
 			<h2>2022</h2>
 			<div class="publication">
