--- a/publications.html
+++ b/publications.html
@@ -25,7 +25,7 @@
 	</header>
 	<main>
 		<h1>Publications</h1>
-		<p>
+		<p class="publication-info">
 			This is a selection of our publications. Follow <a href="https://pubmed.ncbi.nlm.nih.gov/?term=Jeschke%2C%20Jana%5BAuthor%5D&sort=pubdate" target="_blank">this link</a> for a full overview on PubMed.
 		</p>
 		<section class="publication-list">
