Text update and addition of a footer

--- a/index.html
+++ b/index.html
@@ -24,20 +24,26 @@
 		<img src="img/NouvelInstitutJulesBordet_Architecture(6)_1000.jpg">
 	</header>
 	<main>
-		<h1>Jeschke lab</h1>
-		<h2>Translational epigenomics for cancer</h2>
+		<h1>Jeschke group</h1>
+		<h2>Applied Cancer Epigenomics</h2>
 		<p>
 			<img src="img/logo_ulb.png" class="logo">
 			<img src="img/logo_bordet.png" class="logo">
-			<img src="img/logo_fnrs.png" class="logo">
-			<img src="img/logo_erc.jpg" class="logo">
 		</p>
 		<p>
-			Our research is focused on the detection of changes in the epigenome of cancer patients and the utilization of these changes as markers and targets for cancer therapy and to gain new mechanistic insights into tumorigenesis. We realize this by profiling patient samples and genetically or pharmacologically manipulated in vitro and in vivo cancer models using genome and transcriptome-wide next-generation sequencing technologies in combination with phenotypic screens. 
+			The Applied Cancer Epigenomics group is led by Dr. Jana Jeschke and based at Institut Jules Bordet at Erasme Campus of the Université Libre de Bruxelles (ULB) in Brussels, Belgium.
 		</p>
-		<figure>
-			<img src="img/research_overview.png">
-		</figure>
+		<p>
+			Our research is focused on the detection of changes in DNA and RNA modifications in clinical samples of cancer patients using state-of-the-art sequencing technologies. We utilize these changes to improve the stratification of cancer patients for outcome and treatment choice, to identify new targets for cancer therapy and to gain new insights into tumor biology.
+		</p>
+		<p>
+			Our research is supported by the <a href="https://www.frs-fnrs.be/en/" target="_blank">FNRS</a>, <a href="https://erc.europa.eu/homepage" target="_blank">ERC</a>, <a href="https://www.association-jules-bordet.be/" target="_blank">Association Jules Bordet</a> and <a href="https://televie.be/" target="_blank">Télévie</a>.
+		</p>
 	</main>
+	<footer>
+		<div class="footer-text">
+			Applied Cancer Epigenomics
+		</div>
+	</footer>
 </body>
 </html>
