--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
 		</ul>
 	</nav>
 	<header>
-		<!-- image source: https://unsplash.com/photos/71CjSSB83Wo -->
-		<img src="img/pavan-trikutam-71CjSSB83Wo-unsplash.jpg">
+		<!-- image source: https://www.bordet.be/nl/new-bordet-beeldbank -->
+		<img src="img/NouvelInstitutJulesBordet_Canceropole(3)_1000.jpg">
 	</header>
 	<main>
 		<h1>Contact</h1>
@@ -31,17 +31,45 @@
 			</p>
 			<ul>
 				<li>
-					✉️ &nbsp; <a href="mailto: jana.jeschke@ulb.be">jana.jeschke@ulb.be</a>
+					<div class="contact-info-title">E-mail</div>
+					<a href="mailto: jana.jeschke@ulb.be">jana.jeschke@ulb.be</a>
 				</li>
 				<li>
-					&#120143; &nbsp; <a href="https://twitter.com/JanaJeschke" target="_blank">@JanaJeschke</a>
-				</li>
-				<li>
-					🏥 &nbsp; Institut Jules Bordet, 90 Rue Meylemeersch, 1070 Brussels, Belgium (<a href="https://goo.gl/maps/4k7J1SJNSxtR7EQr8" target="_blank">Google maps link</a>)
+					<div class="contact-info-title">Social media</div>
+					<a href="https://www.linkedin.com/in/jana-jeschke-7b17b686/" target="_blank">
+						<img src="img/LinkedIn-Logos/LI-In-Bug.png">
+					</a>
+					<a href="https://twitter.com/JanaJeschke" target="_blank">
+						<img src="img/x-logo/logo-black.png">
+					</a>
 				</li>
 			</ul>
+		</section>
+		<hr>
+		<h2>Visit us</h2>
+		<section class="contact-info">
+			<p>
+				<strong>Applied Cancer Epigenomics Group</strong>
+			</p>
+			<p>
+				Institut Jules Bordet
+			</p>
+			<p>
+				90 Rue Meylemeersch, Level 4
+			</p>
+			<p>
+				1070 Brussels
+			</p>
+			<p>
+				Belgium
+			</p>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2521.023429155951!2d4.2618581!3d50.8122046!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c46433166ee3%3A0xd12d5c648b03c607!2sInstitut%20Jules%20Bordet!5e0!3m2!1sen!2sbe!4v1693607965008!5m2!1sen!2sbe" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</section>
 	</main>
+	<footer>
+		<div class="footer-text">
+			Applied Cancer Epigenomics
+		</div>
+	</footer>
 </body>
 </html>
