--- a/publications.html
+++ b/publications.html
@@ -60,5 +60,10 @@
 			</div>
 		</section>
 	</main>
+	<footer>
+		<div class="footer-text">
+			Applied Cancer Epigenomics
+		</div>
+	</footer>
 </body>
 </html>
