--- a/research.html
+++ b/research.html
@@ -33,5 +33,10 @@
 			<img src="img/research_overview.png">
 		</figure>
 	</main>
+	<footer>
+		<div class="footer-text">
+			Applied Cancer Epigenomics
+		</div>
+	</footer>
 </body>
 </html>
