--- a/research.html
+++ b/research.html
@@ -26,12 +26,34 @@
 	</header>
 	<main>
 		<h1>Research</h1>
-		<p>
-			Our research is focused on the detection of changes in the epigenome of cancer patients and the utilization of these changes as markers and targets for cancer therapy and to gain new mechanistic insights into tumorigenesis. We realize this by profiling patient samples and genetically or pharmacologically manipulated in vitro and in vivo cancer models using genome and transcriptome-wide next-generation sequencing technologies in combination with phenotypic screens. 
-		</p>
-		<figure>
-			<img src="img/research_overview.png">
-		</figure>
+		<section>
+			<h2>Precision oncology with RNA epigenetics</h2>
+			<p>
+				Breast cancer (BC) is a remarkably heterogeneous disease with varied pathological features and clinical outcomes. Despite decades of research resulting in targeted therapies and molecular classifications based on genetic and transcriptomic aberrations, BC remains a deadly disease and insufficiently understood. We thus need to investigate BC beyond the classical genetic and transcriptomic markers.
+			</p>
+			<p>
+				In this context, RNA modifications and their exciting potential to fine-tune complex functions of mRNAs is a brand new field of interest. To harness the power of this emerging epigenetic layer for the clinic, my group aims to establish new technologies for systematic m6A profiling in human BC biopsies. This will allow us to map BC-related changes in m6A and to assess their ability to improve the stratification of BC patients for outcome and treatment choice. This will further allow us to map m6A-disrupted cancer pathways that could be targeted for therapy. We finally aim to apply this approach to other malignancies such as lung cancer.
+			</p>
+			<p>
+				<img src="img/logo_fnrs.png" class="logo">
+				<img src="img/logo_bordet.png" class="logo">
+				<img src="img/logo_televie.jpg" class="logo">
+			</p>
+		</section>
+		<hr>
+		<section>
+			<h2>EpiResist - ERC Starting Grant Project</h2>
+			<h2>Exposing hidden targets of drug resistance in cancer by mapping the epitranscriptome at single-cell resolution</h2>
+			<p>
+				Drug resistance is one of the biggest challenges in the clinical management of breast cancer (BC), but the underlying mechanisms are still not fully understood. What we do know is that epigenetic mechanisms play a key role in the adaptation of cancer cells to therapy. Single-cell profiling of epigenetic DNA and histone modifications have already revealed intriguing and actionable insights into the role of tumor heterogeneity in drug resistance. For the most recently discovered epigenetic layer however, which consists of RNA modifications, we have not yet reached single-cell resolution.
+			</p>
+			<p>
+				The EpiResist project aims to resolve this by establishing the first single-cell maps of the N6-methyladenosine (m6A) mRNA modification in breast cancer. The ability to study m6A in single cells holds great promise to further delineate tumor heterogeneity and to find novel drug resistance targets that have eluded us so far.
+			</p>
+			<p>
+				<img src="img/logo_erc.png" class="logo">
+			</p>
+		</section>
 	</main>
 	<footer>
 		<div class="footer-text">
