Updated people page

--- a/people.html
+++ b/people.html
@@ -26,62 +26,64 @@
 	</header>
 	<main>
 		<h1>Our team</h1>
-		<ul class="team-members">
-			<li class="team-member-card">
-				<div class="column column-left">
-					<img src="img/Picture_Jana_Jeschke.jpg">
-				</div>
-				<div class="column column-right">
-					<h2>Jana Jeschke, PhD</h2>
-					<h3>Group Leader</h3>
-					<p>
-						Jana Jeschke studied Molecular Medicine at the University of Erlangen-Nuremberg, Germany (2003-2008), and performed her PhD research at the Johns Hopkins University in Baltimore, USA (2008-2013), in the groups of Prof. Nita Ahujaand Prof. Jim Herman and in collaboration with Prof. Baylin. During this time, she identified and functionally characterized aberrantly DNA methylated genes in breast cancer and assessed them as novel biomarkers.
-					</p>
-					<p>
-						In 2013, Jana moved to Belgium to start a postdoctoral training in the Laboratory of Cancer Epigenetics at Université Libre de Bruxelles (ULB) in Brussels. Under the supervision of her lead mentor. Prof. Fuks and the breast cancer expert Prof. Sotiriou, she explored changes of various epigenetic modifications on DNA and RNA in breast and other cancers and the clinical relevance of these aberrations for cancer diagnosis and therapy. Her most notable works include the development of an epigenetic immune signature that predicts survival and response to chemotherapy in breast cancer (JCI 2017) and the discovery of m6A mRNA methylation changes in breast cancer and their impact on pathways driving cancer progression and therapy resistance (Nature Cancer 2021). Jana was awarded a postdoctoral fellowship from the Belgian National Fund for Scientific Research (FNRS) in 2014. 
-					</p>
-					<p>
-						In 2022, Jana obtained the mandate of Chercheuse Qualifiée (Associate Professor) from the FNRS to start her own research group at ULB focusing on applied cancer epigenomics. Her group is establishing new and cutting-edge technologies (e.g. Nanopore sequencing) for the mapping of DNA and RNA modifications in tumor biopsies as well as developing innovative bioinformatics tools for the analysis of epigenome/epitranscriptome maps. For her ground breaking research, Jana was awarded an ERC Starting Grant in 2023. 
-					</p>
-				</div>
-			</li>
-			<li class="team-member-card">
-				<div class="column column-left">
-					<img src="img/Ada-Lovelace.jpg">
-				</div>
-				<div class="column column-right">
-					<h2>Fatemeh Habibollahi</h2>
-					<h3>PhD Student</h3>
-					<p>
-						Some extra information here
-					</p>
-				</div>
-			</li>
-			<li class="team-member-card">
-				<div class="column column-left">
-					<img src="img/Ada-Lovelace.jpg">
-				</div>
-				<div class="column column-right">
-					<h2>Dídac Jiménez Sánchez</h2>
-					<h3>PhD Student</h3>
-					<p>
-						Some extra information here
-					</p>
-				</div>
-			</li>
-			<li class="team-member-card">
-				<div class="column column-left">
-					<img src="">
-				</div>
-				<div class="column column-right">
-					<h2>You?</h2>
-					<h3>Lab Technician</h3>
-					<p>
-						Some extra information here
-					</p>
-				</div>
-			</li>
-		</ul>
+		<section>
+			<ul class="team-members">
+				<li class="team-member-card">
+					<div class="column column-left">
+						<img src="img/Jana_Jeschke.jpg">
+					</div>
+					<div class="column column-right">
+						<h2>Jana Jeschke, PhD</h2>
+						<h3>Group Leader</h3>
+						<p>
+							Jana Jeschke studied Molecular Medicine at the University of Erlangen-Nuremberg, Germany (2003-2008), and performed her PhD research at the Johns Hopkins University in Baltimore, USA (2008-2013), in the groups of Prof. Nita Ahuja and Prof. Jim Herman and in collaboration with Prof. Baylin. During this time, she identified and functionally characterized aberrantly DNA methylated genes in breast cancer and assessed them as novel biomarkers.
+						</p>
+						<p>
+							In 2013, Jana moved to Belgium to start a postdoctoral training in the Laboratory of Cancer Epigenetics at Université Libre de Bruxelles (ULB) in Brussels. Under the supervision of her lead mentor. Prof. Fuks and the breast cancer expert Prof. Sotiriou, she explored changes of various epigenetic modifications on DNA and RNA in breast and other cancers and the clinical relevance of these aberrations for cancer diagnosis and therapy. Her most notable works include the development of an epigenetic immune signature that predicts survival and response to chemotherapy in breast cancer (JCI 2017) and the discovery of m6A mRNA methylation changes in breast cancer and their impact on pathways driving cancer progression and therapy resistance (Nature Cancer 2021). Jana was awarded a postdoctoral fellowship from the Belgian National Fund for Scientific Research (FNRS) in 2014.
+						</p>
+						<p>
+							In 2022, Jana obtained the mandate of Chercheuse Qualifiée (Associate Professor) from the FNRS to start her own research group at ULB focusing on applied cancer epigenomics. Her group is establishing new and cutting-edge technologies (e.g. Nanopore sequencing) for the mapping of DNA and RNA modifications in tumor biopsies as well as developing innovative bioinformatics tools for the analysis of epigenome/epitranscriptome maps. For her ground breaking research, Jana was awarded an ERC Starting Grant in 2023.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
+						<img src="img/Fatemeh_Habibollahi.jpeg">
+					</div>
+					<div class="column column-right">
+						<h2>Fatemeh Habibollahi</h2>
+						<h3>PhD Student</h3>
+						<p>
+							More info to come...
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
+						<img src="img/Didac_Jimenez.jpeg">
+					</div>
+					<div class="column column-right">
+						<h2>Dídac Jiménez Sánchez</h2>
+						<h3>PhD Student</h3>
+						<p>
+							More info to come...
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
+						<img src="img/lab_technician_unsplash.jpg">
+					</div>
+					<div class="column column-right">
+						<h2>You?</h2>
+						<h3>Lab Technician</h3>
+						<p>
+							Joining soon!
+						</p>
+					</div>
+				</li>
+			</ul>
+		</section>
 	</main>
 	<footer>
 		<div class="footer-text">
