Completed the list of publications

--- a/publications.html
+++ b/publications.html
@@ -52,10 +52,120 @@
 					Audrey Penning, Jana Jeschke, François Fuks
 				</p>
 				<p>
-					<em>Nature reviews molecular cell biology</em>
+					<em>Nature Reviews Molecular Cell Biology</em>
 				</p>
 				<p>
 					DOI: <a href="https://doi.org/10.1038/s41580-022-00485-8">10.1038/s41580-022-00485-8</a>
+				</p>
+			</div>
+			<hr>
+			<h2>2021</h2>
+			<div class="publication">
+				<h3>
+					Downregulation of the FTO m<sup>6</sup>A RNA demethylase promotes EMT-mediated progression of epithelial tumors and sensitivity to Wnt inhibitors
+				</h3>
+				<p>
+					Jana Jeschke, Evelyne Collignon, Clémence Al Wardi, Mohammad Krayem, et al.
+				</p>
+				<p>
+					<em>Nature Cancer</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1038/s43018-021-00223-7">10.1038/s43018-021-00223-7</a>
+				</p>
+			</div>
+			<hr>
+			<h2>2019</h2>
+			<div class="publication">
+				<h3>
+					MEXPRESS update 2019
+				</h3>
+				<p>
+					Alexander Koch, Jana Jeschke, Wim Van Criekinge, Manon van Engeland, Tim De Meyer
+				</p>
+				<p>
+					<em>Nucleic Acids Research</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1093/nar/gkz445">10.1093/nar/gkz445</a>
+				</p>
+			</div>
+			<hr>
+			<h2>2017</h2>
+			<div class="publication">
+				<h3>
+					DNA methylation-based immune response signature improves patient diagnosis in multiple cancers
+				</h3>
+				<p>
+					Jana Jeschke, Martin Bizet, et al.
+				</p>
+				<p>
+					<em>Journal of Clinical Investigation</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1172/JCI91095">10.1172/JCI91095</a>
+				</p>
+			</div>
+			<hr>
+			<h2>2016</h2>
+			<div class="publication">
+				<h3>
+					Portraits of TET-mediated DNA hydroxymethylation in cancer
+				</h3>
+				<p>
+					Jana Jeschke, Evelyne Collignon, François Fuks
+				</p>
+				<p>
+					<em>Current Opinion in Genetics & Development</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1016/j.gde.2016.01.004">10.1016/j.gde.2016.01.004</a>
+				</p>
+			</div>
+			<hr>
+			<h2>2015</h2>
+			<div class="publication">
+				<h3>
+					MEXPRESS: visualizing expression, DNA methylation and clinical TCGA data
+				</h3>
+				<p>
+					Alexander Koch, Tim De Meyer, Jana Jeschke, Wim Van Criekinge
+				</p>
+				<p>
+					<em>BMC Genomics</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1186/s12864-015-1847-z">10.1186/s12864-015-1847-z</a>
+				</p>
+			</div>
+			<div class="publication">
+				<h3>
+					DNA methylome profiling beyond promoters - taking an epigenetic snapshot of the breast tumor microenvironment
+				</h3>
+				<p>
+					Jana Jeschke, Evelyne Collignon, François Fuks
+				</p>
+				<p>
+					<em>FEBS Journal</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1111/febs.13125">10.1111/febs.13125</a>
+				</p>
+			</div>
+			<hr>
+			<h2>2013</h2>
+			<div class="publication">
+				<h3>
+					Frequent inactivation of cysteine dioxygenase type 1 contributes to survival of breast cancer cells and resistance to anthracyclines
+				</h3>
+				<p>
+					Jana Jeschke, Heather M O'Hagan, Wei Zhang, et al.
+				</p>
+				<p>
+					<em>Clinical Cancer Research</em>
+				</p>
+				<p>
+					DOI: <a href="https://doi.org/10.1158/1078-0432.CCR-12-3751">10.1158/1078-0432.CCR-12-3751</a>
 				</p>
 			</div>
 		</section>
