Replaced Bordet logo

--- a/research.html
+++ b/research.html
@@ -36,7 +36,7 @@
 			</p>
 			<p>
 				<img src="img/logo_fnrs.png" class="logo">
-				<img src="img/logo_bordet.png" class="logo">
+				<img src="img/logo_association_jules_bordet.png" class="logo">
 				<img src="img/logo_televie.jpg" class="logo">
 			</p>
 		</section>
