Changed img src path

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 				<li>
 					<div class="contact-info-title">Social media</div>
 					<a href="https://www.linkedin.com/in/jana-jeschke-7b17b686/" target="_blank">
-						<img src="img/LinkedIn-Logos/LI-In-Bug.png">
+						<img src="img/LI-In-Bug.png">
 					</a>
 					<a href="https://twitter.com/JanaJeschke" target="_blank">
 						<img src="img/x-logo/logo-black.png">
