--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
 						<img src="img/LI-In-Bug.png">
 					</a>
 					<a href="https://twitter.com/JanaJeschke" target="_blank">
-						<img src="img/x-logo/logo-black.png">
+						<img src="img/x-logo-black.png">
 					</a>
 				</li>
 			</ul>
