--- a/publications.html
+++ b/publications.html
@@ -172,7 +172,8 @@
 	</main>
 	<footer>
 		<div class="footer-text">
-			Applied Cancer Epigenomics
+			<p>the Jeschke group</p>
+			<p>Applied Cancer Epigenomics</p>
 		</div>
 	</footer>
 </body>
