--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 	</main>
 	<footer>
 		<div class="footer-text">
-			Applied Cancer Epigenomics
+			<p>the Jeschke group</p>
+			<p>Applied Cancer Epigenomics</p>
 		</div>
 	</footer>
 </body>
