--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	</header>
 	<main>
 		<h1>Jeschke group</h1>
-		<h2>Applied Cancer Epigenomics</h2>
+		<h2>Applied Cancer Epigenomics and Epitranscriptomics</h2>
 		<p>
 			<img src="img/logo_ulb.png" class="logo">
 			<img src="img/logo_bordet.png" class="logo">
