Lab team update

--- a/people.html
+++ b/people.html
@@ -48,10 +48,10 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/Fatemeh_Habibollahi.jpeg">
+						<img src="img/Didac_Jimenez.jpeg">
 					</div>
 					<div class="column column-right">
-						<h2>Fatemeh Habibollahi</h2>
+						<h2>Dídac Jiménez Sánchez</h2>
 						<h3>PhD Student</h3>
 						<p>
 							More info to come...
@@ -60,10 +60,10 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/Didac_Jimenez.jpeg">
+						<img src="img/lab_technician_unsplash.jpeg">
 					</div>
 					<div class="column column-right">
-						<h2>Dídac Jiménez Sánchez</h2>
+						<h2>You?</h2>
 						<h3>PhD Student</h3>
 						<p>
 							More info to come...
