New picture for the team page

--- a/people.html
+++ b/people.html
@@ -60,7 +60,7 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/lab_technician_unsplash.jpeg">
+						<img src="img/andrew-neel-QLqNalPe0RA-unsplash.jpg">
 					</div>
 					<div class="column column-right">
 						<h2>You?</h2>
