Group name update

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 		<h2>Visit us</h2>
 		<section class="contact-info">
 			<p>
-				<strong>Applied Cancer Epigenomics Group</strong>
+				<strong>Applied Cancer Epigenomics and Epitranscriptomics Group</strong>
 			</p>
 			<p>
 				Institut Jules Bordet
@@ -69,7 +69,7 @@
 	<footer>
 		<div class="footer-text">
 			<p>the Jeschke group</p>
-			<p>Applied Cancer Epigenomics</p>
+			<p>Applied Cancer Epigenomics and Epitranscriptomics</p>
 		</div>
 	</footer>
 </body>
