--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<img src="img/logo_bordet.png" class="logo">
 		</p>
 		<p>
-			The Applied Cancer Epigenomics group is led by Dr. Jana Jeschke and based at Institut Jules Bordet at Erasme Campus of the Université Libre de Bruxelles (ULB) in Brussels, Belgium.
+			The Applied Cancer Epigenomics and Epitranscriptomics group is led by Dr. Jana Jeschke and based at Institut Jules Bordet at Erasme Campus of the Université Libre de Bruxelles (ULB) in Brussels, Belgium.
 		</p>
 		<p>
 			Our research is focused on the detection of changes in DNA and RNA modifications in clinical samples of cancer patients using state-of-the-art sequencing technologies. We utilize these changes to improve the stratification of cancer patients for outcome and treatment choice, to identify new targets for cancer therapy and to gain new insights into tumor biology.
@@ -43,7 +43,7 @@
 	<footer>
 		<div class="footer-text">
 			<p>the Jeschke group</p>
-			<p>Applied Cancer Epigenomics</p>
+			<p>Applied Cancer Epigenomics and Epitranscriptomics</p>
 		</div>
 	</footer>
 </body>
