--- a/people.html
+++ b/people.html
@@ -42,7 +42,7 @@
 							In 2013, Jana moved to Belgium to start a postdoctoral training in the Laboratory of Cancer Epigenetics at Université Libre de Bruxelles (ULB) in Brussels. Under the supervision of her lead mentor. Prof. Fuks and the breast cancer expert Prof. Sotiriou, she explored changes of various epigenetic modifications on DNA and RNA in breast and other cancers and the clinical relevance of these aberrations for cancer diagnosis and therapy. Her most notable works include the development of an epigenetic immune signature that predicts survival and response to chemotherapy in breast cancer (JCI 2017) and the discovery of m6A mRNA methylation changes in breast cancer and their impact on pathways driving cancer progression and therapy resistance (Nature Cancer 2021). Jana was awarded a postdoctoral fellowship from the Belgian National Fund for Scientific Research (FNRS) in 2014.
 						</p>
 						<p>
-							In 2022, Jana obtained the mandate of Chercheuse Qualifiée (Associate Professor) from the FNRS to start her own research group at ULB focusing on applied cancer epigenomics. Her group is establishing new and cutting-edge technologies (e.g. Nanopore sequencing) for the mapping of DNA and RNA modifications in tumor biopsies as well as developing innovative bioinformatics tools for the analysis of epigenome/epitranscriptome maps. For her ground breaking research, Jana was awarded an ERC Starting Grant in 2023.
+							In 2022, Jana obtained the mandate of Chercheuse Qualifiée (Associate Professor) from the FNRS to start her own research group at ULB focusing on applied cancer epigenomics and epitranscriptomics. Her group is establishing new and cutting-edge technologies (e.g. Nanopore sequencing) for the mapping of DNA and RNA modifications in tumor biopsies as well as developing innovative bioinformatics tools for the analysis of epigenome/epitranscriptome maps. For her ground breaking research, Jana was awarded an ERC Starting Grant in 2023.
 						</p>
 					</div>
 				</li>
@@ -88,7 +88,7 @@
 	<footer>
 		<div class="footer-text">
 			<p>the Jeschke group</p>
-			<p>Applied Cancer Epigenomics</p>
+			<p>Applied Cancer Epigenomics and Epitranscriptomics</p>
 		</div>
 	</footer>
 </body>
