--- a/publications.html
+++ b/publications.html
@@ -173,7 +173,7 @@
 	<footer>
 		<div class="footer-text">
 			<p>the Jeschke group</p>
-			<p>Applied Cancer Epigenomics</p>
+			<p>Applied Cancer Epigenomics and Epitranscriptomics</p>
 		</div>
 	</footer>
 </body>
