--- a/research.html
+++ b/research.html
@@ -52,7 +52,7 @@
 	<footer>
 		<div class="footer-text">
 			<p>the Jeschke group</p>
-			<p>Applied Cancer Epigenomics</p>
+			<p>Applied Cancer Epigenomics and Epitranscriptomics</p>
 		</div>
 	</footer>
 </body>
