Added master student to people page

--- a/people.html
+++ b/people.html
@@ -60,6 +60,18 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/Milena_Pierzchalska.jpeg">
+					</div>
+					<div class="column column-right">
+						<h2>Milena Pierzchalska</h2>
+						<h3>Master Student</h3>
+						<p>
+							More info to come...
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/andrew-neel-QLqNalPe0RA-unsplash.jpg">
 					</div>
 					<div class="column column-right">
