Team member photo update

--- a/people.html
+++ b/people.html
@@ -48,7 +48,7 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/Didac_Jimenez.jpeg">
+						<img src="img/Didac_Jimenez.jpg">
 					</div>
 					<div class="column column-right">
 						<h2>Dídac Jiménez Sánchez</h2>
