Team member photo update

--- a/people.html
+++ b/people.html
@@ -60,7 +60,7 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/Milena_Pierzchalska.jpeg">
+						<img src="img/Milena_Pierzchalska.jpg">
 					</div>
 					<div class="column column-right">
 						<h2>Milena Pierzchalska</h2>
