Added Brendan to the team page

--- a/people.html
+++ b/people.html
@@ -60,6 +60,21 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/Brendan_Beahan.jpg">
+					</div>
+					<div class="column column-right">
+						<h2>Brendan Beahan</h2>
+						<h3>PhD Student</h3>
+						<p>
+							After working as an English Teacher in Tokyo and then as a data analyst for an online food-ordering software company, Brendan decided to pursue his Master in Bioinformatics at KU Leuven. During the master he worked on many different bioinformatics projects, including a CNN for classifying amyloid-beta plaques in Alzheimer's patients and a master's thesis investigating the molecular dynamics of phage-induced lysine acetylations. Brendan’s chief aim is to work on challenging scientific problems with direct applications to human health, which is in large part why he was excited to begin his work within the Jeschke Lab investigating the application of nanopore technology to better understand m6A dysregulation in breast cancer.
+						</p>
+						<p>
+							When not working at the lab, Brendan enjoys jogging (especially at park cinquantenaire!), weightlifting and watching films.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/Milena_Pierzchalska.jpg">
 					</div>
 					<div class="column column-right">
