Added a description for Milena

--- a/people.html
+++ b/people.html
@@ -81,7 +81,7 @@
 						<h2>Milena Pierzchalska</h2>
 						<h3>Master Student</h3>
 						<p>
-							More info to come...
+							Milena is a master student in Biomedical Sciences. She joined the lab for her master thesis on the benchmarking of bioinformatics tools for the detection of RNA modifications from Oxford Nanopore Direct RNA Sequencing data.
 						</p>
 					</div>
 				</li>
