Added description Didac

--- a/people.html
+++ b/people.html
@@ -54,7 +54,10 @@
 						<h2>Dídac Jiménez Sánchez</h2>
 						<h3>PhD Student</h3>
 						<p>
-							More info to come...
+							Dídac studied biosystems engineering at the Polytechnic University of Catalonia where he developed an interest in genetics and programming. He carried out his bachelor's thesis at the Centre for Research in Agricultural Genomics, about melon QTL's and CRISPR/Cas9. After that, he decided that he wanted to have a career in research and studied a master's degree in Bioinformatics and Biostatistics at the Open University of Catalonia, where he carried out a master's thesis on the benchmarking of single-cell RNA sequencing preprocessing. With the master finished, he started a PhD at the ACEE lab with the goal to study the role of epitranscriptomics in tumor-associated neutrophils in lung cancer.
+						</p>
+						<p>
+							Outside the office, he is passionate about swing dancing, bouldering and reading, among other things.
 						</p>
 					</div>
 				</li>
