Added Damjan to the people page

--- a/people.html
+++ b/people.html
@@ -48,6 +48,21 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/Damjan_Avsec.jpeg">
+					</div>
+					<div class="column column-right">
+						<h2>Damjan Avsec</h2>
+						<h3>Postdoctoral Researcher</h3>
+						<p>
+							Damjan earned his Master’s degree in Pharmacy in 2018 and a Ph.D. in Biomedicine, specialising in hemato-oncology, in 2023. His doctoral thesis focused on understanding the role of proteasome, immunoproteasome, and autophagy in the therapy and resistance of leukemia.
+						</p>
+						<p>
+							Damjan is currently pursuing an MBA from the School of Economics and Business, aiming to use an entrepreneurial mindset to efficiently translate scientific discoveries into therapeutic solutions. He has joined the ACEE group, under the leadership of Dr. Jana Jeschke, to unravel the role of the epigenome and epitranscriptome in resistance of cancer. His aspiration is to pioneer the integration of epigenomics/epitranscriptomics into hemato-oncology, driving forward advancements in the field.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/Didac_Jimenez.jpg">
 					</div>
 					<div class="column column-right">
