Added Siqi to the team page

--- a/people.html
+++ b/people.html
@@ -63,6 +63,24 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/Siqi_Zheng.jpg">
+					</div>
+					<div class="column column-right">
+						<h2>Siqi Zheng</h2>
+						<h3>Postdoctoral Researcher</h3>
+						<p>
+							Siqi obtained her Master's degree in Medical Biochemistry and Molecular Biology from Peking University, and a Ph.D. from the University of Groningen, in 2024. In her doctoral dissertation, she investigated chromosomal instability and potential therapeutic targets in cancer.
+						</p>
+						<p>
+							In the same year, she joined the Applied Cancer Epigenomics and Epitranscriptomics research group led by Dr. Jana Jeschke as a postdoc. Her work mainly focuses on epigenetic and epitranscriptomic alterations in cancer treatment. She aims to understand the molecular mechanisms underlying drug resistance in cancer and develop novel therapeutic approaches.
+						</p>
+						<p>
+							Outside the office, Siqi is interested in running and reading books.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/Didac_Jimenez.jpg">
 					</div>
 					<div class="column column-right">
