--- a/people.html
+++ b/people.html
@@ -22,7 +22,8 @@
 	</nav>
 	<header>
 		<!-- image source: https://unsplash.com/photos/PGnqT0rXWLs -->
-		<img src="img/helena-lopes-PGnqT0rXWLs-unsplash.jpg">
+		<!-- <img src="img/helena-lopes-PGnqT0rXWLs-unsplash.jpg"> -->
+		<img src="img/team.jpg">
 	</header>
 	<main>
 		<h1>Our team</h1>
