Added Raphael to the team page

--- a/people.html
+++ b/people.html
@@ -112,6 +112,23 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/RafVandeVijver.JPG">
+					</div>
+					<div class="column column-right">
+						<h2>Raphaël Van de Vijver</h2>
+						<h3>Lab technician</h3>
+						<p>
+							Raphaël earned his bachelor degree in Biomedical research at the Avans university of applied sciences. For his thesis, he pursued his interest in next generation sequencing by comparing Oxford nanopore and Illumina sequencing of the gut microbiome.
+						<p>
+							Here at the ACEE group, he will support the students in the lab with their research projects and manage the lab.
+						</p>
+						<p>
+							Outside of the lab, Raphaël enjoys playing rugby.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/Milena_Pierzchalska.jpg">
 					</div>
 					<div class="column column-right">
