Moved Milena to a new alumni section

--- a/people.html
+++ b/people.html
@@ -129,18 +129,6 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
-						<img src="img/Milena_Pierzchalska.jpg">
-					</div>
-					<div class="column column-right">
-						<h2>Milena Pierzchalska</h2>
-						<h3>Master Student</h3>
-						<p>
-							Milena is a master student in Biomedical Sciences. She joined the lab for her master thesis on the benchmarking of bioinformatics tools for the detection of RNA modifications from Oxford Nanopore Direct RNA Sequencing data.
-						</p>
-					</div>
-				</li>
-				<li class="team-member-card">
-					<div class="column column-left">
 						<img src="img/andrew-neel-QLqNalPe0RA-unsplash.jpg">
 					</div>
 					<div class="column column-right">
@@ -160,6 +148,23 @@
 						<h3>Lab Technician</h3>
 						<p>
 							Joining soon!
+						</p>
+					</div>
+				</li>
+			</ul>
+		</section>
+		<h2>Alumni</h2>
+		<section>
+			<ul class="team-members">
+				<li class="team-member-card">
+					<div class="column column-left">
+						<img src="img/Milena_Pierzchalska.jpg">
+					</div>
+					<div class="column column-right">
+						<h2>Milena Pierzchalska</h2>
+						<h3>Master Student</h3>
+						<p>
+							Milena joined the lab for her master thesis on the benchmarking of bioinformatics tools for the detection of RNA modifications from Oxford Nanopore Direct RNA Sequencing data.
 						</p>
 					</div>
 				</li>
