Added Licheng Li

--- a/people.html
+++ b/people.html
@@ -129,6 +129,23 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/Licheng_Li.jpg">
+					</div>
+					<div class="column column-right">
+						<h2>Licheng Li</h2>
+						<h3>PhD student</h3>
+						<p>
+							Licheng graduated in July 2023 from the Clinical Medical College of Guizhou Medical University with a Master’s degree in Hematology. Before completing his Master’s, he gained seven years of experience as a clinical physician specializing in hematologic oncology. His Master’s research focused on understanding the mechanisms of transcription factors and their regulatory networks in malignant hematologic diseases.
+						<p>
+							In October 2024, Licheng joined the ACEE lab as a Ph.D. candidate under the guidance of Dr. Jana Jeschke. His research aims to explore the roles and mechanisms of m6A modifications in breast cancer and other cancers, with a goal of uncovering novel insights into cancer progression and treatment.
+						</p>
+						<p>
+							Outside the lab, Licheng enjoys traveling and music.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/andrew-neel-QLqNalPe0RA-unsplash.jpg">
 					</div>
 					<div class="column column-right">
