Added Peilin Ouyang

--- a/people.html
+++ b/people.html
@@ -129,6 +129,20 @@
 				</li>
 				<li class="team-member-card">
 					<div class="column column-left">
+						<img src="img/Peilin_Ouyang.png">
+					</div>
+					<div class="column column-right">
+						<h2>Peilin Ouyang</h2>
+						<h3>PhD student</h3>
+						<p>
+							Peilin Ouyang is a gynecologic oncologist with experience in clinical cohort studies. She is focused on improving treatment strategies by translating research findings into clinical practice. During her master's studies, she conducted a retrospective analysis on neoadjuvant therapy for cervical adenocarcinoma. In her clinical work, she developed a predictive model to evaluate the risk of gestational diabetes mellitus (GDM) in pregnant individuals with polycystic ovary syndrome (PCOS). Currently, she is pursuing doctoral studies, expanding her research skills in tumor epigenetics to deepen her understanding of cancer biology.
+						<p>
+							In her free time, Peilin enjoys hiking, watching movies, and exploring new recipes.
+						</p>
+					</div>
+				</li>
+				<li class="team-member-card">
+					<div class="column column-left">
 						<img src="img/Licheng_Li.jpg">
 					</div>
 					<div class="column column-right">
