Lower res team image

--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
 	<header>
 		<!-- image source: https://unsplash.com/photos/PGnqT0rXWLs -->
 		<!-- <img src="img/helena-lopes-PGnqT0rXWLs-unsplash.jpg"> -->
-		<img src="img/team_xmas_garland.png">
+		<img src="img/team_xmas_garland.jpg">
 	</header>
 	<main>
 		<h1>Our team</h1>
